@@ -1,3 +1,5 @@
+* Conduit now takes an optional TLS argument, allowing servers to support encryption.
+
 2.3.0 (2015-03-10):
 * Remove the `IO_PAGE` module type from `V1`. This has now moved into the
   `io-page` pacakge (#356)
